--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -2,38 +2,38 @@
   "lang": "zh",
   "start": "开始游戏",
   "normal": "普通模式",
-  "endless": "无尽模式",
-  "practice": "练习模式",
-  "settings": "游戏设置",
-  "img-before": "点击前图",
-  "img-after": "点击后图",
-  "sound-on": "音效: 开启",
-  "sound-off": "音效: 关闭",
-  "title": "标题",
-  "time": "时间",
+  "endless": "无盡模式",
+  "practice": "練習模式",
+  "settings": "游戲設定",
+  "img-before": "點擊前圖",
+  "img-after": "點擊後圖",
+  "sound-on": "音效: 開啟",
+  "sound-off": "音效: 關閉",
+  "title": "標題",
+  "time": "",
   "key": "按键",
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
-  "default-dfjk": "默认为DFJK",
-  "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
+  "eat-kano": "吃掉蘇樹葉",
+  "default-dfjk": "默認為DFJK",
+  "default-20s": "默認為20秒",
+  "game-title": "吃掉樹葉",
+  "game-intro1": "從最底下開始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
-  "time-up": "时间到",
-  "calculating": "计算中",
+  "time-up": "時間到",
+  "calculating": "計算中",
   "score": "得分",
   "best": "最佳",
   "again": "重来",
-  "home": "主页",
+  "home": "主頁",
   "rank": "排行",
-  "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
+  "repo": "倉庫",
+  "text-level-1": "試著練一下?",
+  "text-level-2": "加油",
+  "text-level-3": "打太極",
   "text-level-4": "您",
   "text-level-5": "人?",
   "time-over": "倒计时多了",
